# gitcrawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
src/: main.py  models.py  settings.py
src/gitcrawler/: crawler.py  exceptions.py  models.py  proxy_manager.py
tests/: conftest.py
tests/crawler/: test_crawler.py  test_proxy_manager.py
tests/crawler/models/: test_base_models.py
tests/fixtures/: crawler.py  model_data.py  proxy.py
